Fix app list app name overflow

--- a/portal/src/graphql/portal/AppsScreen.module.scss
+++ b/portal/src/graphql/portal/AppsScreen.module.scss
@@ -44,4 +44,5 @@
   color: #176df3;
   margin-bottom: 20px;
   font-size: 22px;
+  overflow-wrap: break-word;
 }
